--- a/仿凡客/js/index.html
+++ b/仿凡客/js/index.html
@@ -13,7 +13,7 @@
         您好,欢迎光临凡客诚品！
     </span>
         <span class="login_reg">
-            [ <a href="登录"></a> | <a href="注册"></a>]
+           <a href="#">登录</a><span class="or">或</span><a href="#">注册</a>
             <a href="我的订单"></a>
         </span>
     </div>
