--- a/水平导航菜单.html
+++ b/水平导航菜单.html
@@ -6,14 +6,14 @@
 </head>
 <style>
     /*a{*/
-        /*background-color: #999999;*/
-        /*text-decoration: none;*/
-        /*width: 150px;*/
-        /*height: 50px;*/
-        /*float: left;*/
-        /*margin-right: 10px;*/
-        /*text-align: center;*/
-        /*line-height: 50px;*/
+    /*background-color: #999999;*/
+    /*text-decoration: none;*/
+    /*width: 150px;*/
+    /*height: 50px;*/
+    /*float: left;*/
+    /*margin-right: 10px;*/
+    /*text-align: center;*/
+    /*line-height: 50px;*/
     /*}*/
     *{
         padding: 0px;
@@ -47,9 +47,17 @@
 <!--<a href="#" >link2</a>-->
 <!--<a href="#" >link3</a>-->
 <ul id="menu">
-    <li><a href="#">link</a></li>
-    <li><a href="#">link</a></li>
-    <li><a href="#">link</a></li>
+    <li>
+        <a href="#">link</a>
+        <!--href属性表示链接的地址-->
+    </li>
+    <li>
+        <a href="#">link</a>
+    </li>
+    <li>
+        <a href="#">link</a>
+    </li>
+    <!--ul里不能嵌套其它标签，li可以-->
 </ul>
 </body>
 </html>
