--- a/多级导航菜单2.html
+++ b/多级导航菜单2.html
@@ -109,7 +109,7 @@
         };
         aLi[i].onmouseout=function(){
             this.children[1].style.display='none';
-        };
+        };//为li索引为1的孩子绑定style
     }
 
 
