--- a/盒模型.html
+++ b/盒模型.html
@@ -6,7 +6,7 @@
 
 </head>
 <style>
-    #div {
+    #div4 {
         width: 200px;
         height: 100px;
         background-color: #a98e67;
@@ -14,10 +14,40 @@
         padding: 10px;
 
     }
+    #div1{
+        width: 100px;
+        height: 100px;
+        background-color: #67b168;
+        overflow:hidden
+        margin-bottom:50px
+    }
+    #div2{
+        width: 50px;
+        height: 50px;
+        background-color: #843534;
+        margin: 10px  ;
+
+    }
+    #div3 {
+        width: 50px;
+        height: 50px;
+        background-color: #843534;
+        margin-top: 10px;
+
+
+    }
 
 </style>
 
 <body>
-  <div id="div">盒模型盒模型盒模型盒模型盒模型盒模型盒模型盒模型盒模型盒模型盒模型盒模型</div>
+  <div id="div4">盒模型盒模型盒模型盒模型盒模型盒模型盒模型盒模型盒模型盒模型盒模型盒模型</div>
+  <div id="div1">
+      <div id="div2">
+
+          </div>
+
+  </div>
+
+      <div id="div3"></div>
 </body>
 </html>
