遍历对象遍历数组，用for in。

--- a/遍历.html
+++ b/遍历.html
@@ -20,7 +20,7 @@
     for( var p in  o){
         console.log(p+":"+o[p]);
     }
-    //         name:pyl
+    //   输出： name:pyl
     //         age:20
     //        school:林大
 
