--- a/折叠菜单.html
+++ b/折叠菜单.html
@@ -74,8 +74,8 @@
     for(var i=0;i<aH3.length;i++) {
         aH3[i].index = i;
         aH3[i].onclick = function () {
-            aSubMenu[this.index].style.display = "block";//index存储索引，引用事件源this，
-            // this.inde取到当前点击的index
+            aSubMenu[this.index].style.display = "block";//index存储索引，引用事件源this.
+
         };
     }
 
